# depmap-db

./: .env.template  .env.template.windows  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DepMap Data README.txt  README.md  README_FIX.md  pyproject.toml
.claude/: 01-package-summary.md  02-data-import-guide.md
.claude/skills/depmap/: SKILL.md
notebooks/: mts028_aml_class_greatwall_b55.py  mts028_c604_aml_phase1.py  mts028_c604_explore.py  mts028_c604_gastric.py  mts028_c604_mastl_dependency_overlap.py  pkmyt1_example.py
reports/: depmap_polars_scan_api.md  prism_phase1_architecture.md  proteomics_gygi_unmapped_audit.csv  proteomics_gygi_unmapped_audit.md
reports/mts028_c604_mastl_overlap/: analysis_summary.csv  c604_endpoint.csv  c604_gene_correlations.csv  c604_pathways.csv  gene_overlap_summary.csv  mastl_gene_correlations.csv  mastl_pathways.csv  overlap_table.csv  pathway_concordance_summary.csv  shared_pathways.csv  top100_c604.csv  top100_mastl.csv
src/depmap_db/: __init__.py  cli.py  config.py  polars.py  query.py
src/depmap_db/analysis/: __init__.py  c604_mastl_overlap.py  expression_pairs.py
src/depmap_db/database/: __init__.py  connection.py  schema.py
src/depmap_db/database/queries/: __init__.py  views.py
src/depmap_db/downloader/: __init__.py  depmap_client.py  exceptions.py  file_manager.py  releases.py
src/depmap_db/etl/: __init__.py  uniprot_mapping.py
src/depmap_db/etl/processors/: __init__.py  base.py  gene.py  gene_effect.py  gene_effect_optimized.py  gene_effect_wide.py  gene_expression.py  gene_expression_wide.py  model.py  mutations.py  prism_common.py  prism_mts028.py  prism_primary.py  prism_secondary.py  protein_expression_ms_wide.py
src/depmap_db/export/: __init__.py  exporter.py
src/depmap_db/notebooks/: depmap_pairwise_expression_tcga_style.ipynb  explore_data.ipynb  scratch.ipynb
src/depmap_db/plots/: __init__.py  _helpers.py  drug_plots.py  expression_dependency.py  gene_plots.py  heatmap.py  lineage_plots.py  mutation_comparison.py  mutation_plots.py
src/depmap_db/utils/: __init__.py  constants.py  helpers.py
tests/: test_basic_functionality.py  test_mutations.py  test_plots.py  test_polars.py  test_prism_processors.py  test_protein_processor.py  test_query_cli.py
